fixed buttons spacing

--- a/adhocracy-plus/static/collapsible.css
+++ b/adhocracy-plus/static/collapsible.css
@@ -16,15 +16,15 @@
 
 .buttonBox{
     position: fixed;
-    top: 90%;
+    bottom: 1%;
     left: 2%;
     z-index: 9999;
 }
 
 .buttonBox2{
     position: fixed;
-    top: 90%;
-    left: 89%;
+    bottom: 1%;
+    right: 2%;
     z-index: 9999;
 }
 
@@ -146,7 +146,7 @@
     margin-bottom:20px;
     margin-left: 10px;
     display: block;
-    background: aquamarine;
+    background: teal;
     color: white;
     width: 70px;
     height: 70px;
@@ -163,7 +163,7 @@
     margin-bottom: 20px;
     margin-top: 10px;
     display: block;
-    background: aquamarine;
+    background: teal;
     color: white;
     width: 180px;
     height: auto;
